# franciscus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  GITHUB_CONTRIBUTIONS_PLAN.md  HANDOFF-noscript-book-links.md  Makefile  README.md  ROADMAP.md
.github/workflows/: deploy.yml
app/: .env  components.json  package-lock.json  package.json  vite.config.ts
app/docs/ui-tasks/: 01-shadcn-foundation.md  02-mobile-responsive.md  03-accessibility.md
app/src/: app.css  app.d.ts  app.html  service-worker.ts
app/src/lib/: Breadcrumbs.svelte  DbGate.svelte  DbProgressBar.svelte  Footer.svelte  LanguagePicker.svelte  NoScriptNotice.svelte  TopNav.svelte  attrColors.ts  db.ts  dbState.ts  github.svelte.ts  index.ts  topicColors.ts  trail.svelte.ts  types.ts
app/src/lib/i18n/: en.json  index.ts  it.json  store.svelte.ts
app/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
app/src/routes/about/: +page.svelte  +page.ts
app/src/routes/attributes/: +page.svelte
app/src/routes/attributes/[attr_type]/[attr_value]/: +page.svelte
app/src/routes/book/: +layout.svelte  +layout.ts
app/src/routes/book/[book_id]/: +page.svelte  +page.ts
app/src/routes/bookmarks/: +page.svelte  +page.ts
app/src/routes/contact/: +page.svelte
app/src/routes/contribute/: +page.svelte  +page.ts
app/src/routes/search/: +page.svelte
app/src/routes/topics/: +page.svelte  +page.ts
app/src/routes/topics/[topic_type]/: +layout.svelte  +layout.ts
app/static/: CNAME  manifest.webmanifest
server/: Cargo.toml
server/src/: db.rs  main.rs  models.rs  parser.rs
(+4 files in other folders)
