[package]
name = "franciscus-server"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
rusqlite = { version = "0.40.1", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
comrak = "0.52.0"
